updating the rest of the files

--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "fa8ead89",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "5ada255f",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "91adc350",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "b0d96b41",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "5042c124",
    "metadata": {},
    "outputs": [
@@ -535,6 +535,30 @@
     "for book in books:\n",
     "    pages = book.text\n",
     "    print(pages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7146938f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_books = html_books.find('h3', class_= 'nav nav-list')\n",
+    "books = tag_books.find_all('a')\n",
+    "for book in books:\n",
+    "    pages = book.text\n",
+    "    print(pages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0daa2fde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.quit()"
    ]
   }
  ],
